--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,38 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html,
+body {
+    height: 100%;;
+}
+
 body {
     background-color: rgb(38,79,54);
 }
 
 h1 {
     color: rgb(255,188,13);
+}
+
+.container {
+    margin: auto;
+    width: 1280px;
+    height: 100%;
+    background-color: #EBEBEB;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.container .inner-container {
+    min-height: 100%;
+    border-radius: 10px;
+}
+
+.container .inner-container .search-bar {
+    height: 60px;
+    border-radius: 10px;
+    background-color: white;
+
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    /* 51 */
 }
