add main page style, search bar linked to function

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap');
 
+:root {
+    --header-color: rgb(255,188,13);
+    --bg-color: rgb(38,79,54);
+    --container-color: #EBEBEB;
+    --page-color: white;
+    --search-bar-items: rgb(184,184,184);
+
+    --basic-padding: 20px;
+    --basic-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
 * {
+    margin: 0;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -10,32 +22,90 @@ body {
 }
 
 body {
-    background-color: rgb(38,79,54);
+    background-color: var(--bg-color);
 }
 
 h1 {
-    color: rgb(255,188,13);
+    font-size: 50px;
+    color: var(--header-color);
 }
 
 .container {
     margin: auto;
-    width: 1280px;
+    width: 900px;
     height: 100%;
-    background-color: #EBEBEB;
-    padding: 20px;
     border-radius: 10px;
+    margin-top: var(--basic-padding);
+    margin-bottom: var(--basic-padding);
+}
+
+.container .main-header {
+    display: flex;
+    justify-content: center;
+    margin-bottom: var(--basic-padding);
 }
 
 .container .inner-container {
-    min-height: 100%;
+    min-height: 800px;
+    background-color: var(--container-color);
+    /* padding: var(--basic-padding); */
     border-radius: 10px;
 }
 
-.container .inner-container .search-bar {
+.container .inner-container .page {
+    min-height: 800px;
+    border-radius: 10px;
+    padding: var(--basic-padding);
+    display: flex;
+    flex-direction: column;
+    gap: var(--basic-padding);
+}
+
+.container .inner-container .page .search-bar {
     height: 60px;
     border-radius: 10px;
-    background-color: white;
+    background-color: var(--page-color);
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: var(--basic-padding);
 
-    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
-    /* 51 */
+    box-shadow: var(--basic-box-shadow);
+}
+
+.container .inner-container .page .search-bar button {
+    background-color: transparent;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    border: none;
+}
+
+.container .inner-container .page .search-bar button i {
+    font-size: 20px;
+    color: var(--search-bar-items);
+    margin-left: var(--basic-padding);
+}
+
+.container .inner-container .page .search-bar input {
+    font-size: 20px;
+    color: var(--search-bar-items);
+    width: 100%;
+    margin-right: var(--basic-padding);
+    outline: none;
+    border: none;
+}
+
+.container .inner-container .page .search-bar input::placeholder {
+    color: var(--search-bar-items);
+}
+
+.container .inner-container .page .items-container {
+
+    border-radius: 10px;
+    background-color: var(--page-color);
+    padding: var(--basic-padding);
+
+    box-shadow: var(--basic-box-shadow);
 }
